force-app/main/default/objects/NSF_Bookmark_Listing__c/NSF_Bookmark_Listing__c.object-meta.xml
<CustomObject>
    <label>Bookmark Listing</label>
    <nameField>
        <displayFormat>SL-{0000}</displayFormat>
        <label>Bookmark Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bookmark Listings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>