force-app/main/default/objects/NSF_Bookmark_Listing__c/fields/Bookmark_Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Bookmark_Unique_Key__c</fullName>
    <label>Bookmark Unique Key</label>
    <description>Composite key combining user ID and bookmarked record ID to enforce uniqueness and prevent duplicate bookmarks under concurrency</description>
    <inlineHelpText>Auto-populated unique key that prevents duplicate bookmarks for the same user and record</inlineHelpText>
    <type>Text</type>
    <length>55</length>
    <externalId>true</externalId>
    <unique>true</unique>
    <caseSensitive>true</caseSensitive>
</CustomField>