force-app/main/default/objects/NSF_Bookmark_Listing__c/fields/NSF_CardId__c.field-meta.xml
<CustomField>
    <fullName>NSF_CardId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Card</label>
    <referenceTo>NSF_Card__c</referenceTo>
    <relationshipLabel>Bookmarks</relationshipLabel>
    <relationshipName>Bookmarks_Card</relationshipName>
    <type>Lookup</type>
</CustomField>