force-app/main/default/objects/NSF_Bookmark_Listing__c/fields/NSF_ExamId__c.field-meta.xml
<CustomField>
    <fullName>NSF_ExamId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exam</label>
    <referenceTo>NSF_Exam__c</referenceTo>
    <relationshipLabel>Bookmarks</relationshipLabel>
    <relationshipName>Bookmarks_Exam</relationshipName>
    <type>Lookup</type>
</CustomField>